--- a/ambiental.html
+++ b/ambiental.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Aspecto Econômico</title>
+  <title>Aspecto Ambiental</title>
   <style>
     body {
       font-family: Arial, sans-serif;
