--- a/ambiental.html
+++ b/ambiental.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fffbe8;
+      background: #e8ffe8;
       padding: 20px;
     }
     h1 { color: #228b22; }
