--- a/ambiental.html
+++ b/ambiental.html
@@ -21,8 +21,12 @@
     <li> Preservação da Biodiversidade e ecossistemas..</li>
     <li> Redução da poluição e incentivo às energias limpas e renováveis</li>
     <li> Conservação da biodiversidade.</li>
-  </ul>
-  <img src="https://images.unsplash.com/photo-1517457210700-b6f70912f2c8?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo">
+
+<img 
+  src="https://img.freepik.com/vetores-premium/maos-de-close-up-segurando-linha-preta-broto-de-arvore-crescendo-a-partir-do-solo-mao-conceito-de-protecao-do-planeta-terra_1098986-1449.jpg?w=2000" 
+  alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo"
+  style="width: 400px; display: block; margin-right: 100px auto;"
+>
   <p>O **aspecto ambiental** é sobre a gente cuidar do nosso planeta. isso signfica usar os recursos naturais, tipo água e a energia, de um jeito inteligente para que eles não acabem. também inclui proteger animais e as plantas, reduzir a poluição e usar energias limpas, como a solar. A ideia é garantir que a gente possa continuar vivendo bem sem destruir a natureza para as futuras gerações</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
