--- a/ambiental.html
+++ b/ambiental.html
@@ -23,7 +23,7 @@
     <li> Conservação da biodiversidade.</li>
 
 <img 
-  src="https://img.freepik.com/vetores-premium/maos-de-close-up-segurando-linha-preta-broto-de-arvore-crescendo-a-partir-do-solo-mao-conceito-de-protecao-do-planeta-terra_1098986-1449.jpg?w=2000" 
+  src="https://sdmntprwestus3.oaiusercontent.com/files/00000000-c528-61fd-b0d5-93d2bc51cfa9/raw?se=2025-09-30T12%3A20%3A31Z&sp=r&sv=2024-08-04&sr=b&scid=d1773235-916e-5de4-8604-41ee70e3f19a&skoid=5c72dd08-68ae-4091-b4e1-40ccec0693ae&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-29T23%3A22%3A48Z&ske=2025-09-30T23%3A22%3A48Z&sks=b&skv=2024-08-04&sig=ww9ReZAtcVW2EXArZBdJVp7Po0lj4QdOC3yqs63PF5w%3D" 
   alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo"
   style="width: 400px; display: block; margin-right: 100px auto;"
 >
