--- a/economico.html
+++ b/economico.html
@@ -22,7 +22,11 @@
     <li>Geração de empregos sustentáveis</li>
     <li>Economia que não dependa apenas da exploração predatória da natureza.</li>
   </ul>
-  <img src="https://images.unsplash.com/photo-1517457210700-b6f70912f2c8?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo">
+<img 
+  src="https://sdmntprsouthcentralus.oaiusercontent.com/files/00000000-4a00-61f7-9c83-9b7b2807897b/raw?se=2025-09-30T12%3A25%3A11Z&sp=r&sv=2024-08-04&sr=b&scid=a4eb63e5-e8c9-5ddc-8276-cbdcc450fca8&skoid=5c72dd08-68ae-4091-b4e1-40ccec0693ae&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-30T12%3A11%3A28Z&ske=2025-10-01T12%3A11%3A28Z&sks=b&skv=2024-08-04&sig=lFaD6LKBZa%2BgmB9p8rY2BlQnFT7kZd6/OeD%2BCG0H27k%3D" 
+  alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo"
+  style="width: 400px; display: block; margin-right: 100px auto;"
+>
   <p>O **aspecto econômico** não é só sobre grana, mas sobre ganhar essa grana de um jeito que não prejudique o ambiente nem as pessoas. A ideia é criar empregos e riqueza de forma inteligente, usando a tecnologia e a inovação pra aproveitar os recursos sem desperdício. Assim, a gente consegue crescer economicamente, mas com responsabilidade, sem esgotar o que a natureza tem a oferecer.</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
