--- a/economico.html
+++ b/economico.html
@@ -23,7 +23,7 @@
     <li>Economia que não dependa apenas da exploração predatória da natureza.</li>
   </ul>
 <img 
-  src="https://sdmntprsouthcentralus.oaiusercontent.com/files/00000000-4a00-61f7-9c83-9b7b2807897b/raw?se=2025-09-30T12%3A25%3A11Z&sp=r&sv=2024-08-04&sr=b&scid=a4eb63e5-e8c9-5ddc-8276-cbdcc450fca8&skoid=5c72dd08-68ae-4091-b4e1-40ccec0693ae&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-30T12%3A11%3A28Z&ske=2025-10-01T12%3A11%3A28Z&sks=b&skv=2024-08-04&sig=lFaD6LKBZa%2BgmB9p8rY2BlQnFT7kZd6/OeD%2BCG0H27k%3D" 
+  src="mao_dinheiro.png"
   alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo"
   style="width: 400px; display: block; margin-right: 100px auto;"
 >
