--- a/social.html
+++ b/social.html
@@ -22,7 +22,9 @@
     <li>Valorização da diversidade cultural</li>
     <li>Melhoria na qualidade de vida, saúde, educação e moradia</li>
   </ul>
-  <img src="https://images.unsplash.com/photo-1533420836569-8088034a7421?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Uma imagem de um grupo de pessoas de diferentes etnias trabalhando juntas em uma horta">
+  <img
+    src="trabalho.png"
+    alt="Uma imagem de um grupo de pessoas de diferentes etnias trabalhando juntas em uma horta">
   <p>O **aspecto social** foca em todo mundo viver bem e de forma justa. O objetivo é diminuir a diferença entre ricos e pobres, garantir que todos tenham seus direitos respeitados e que a diversidade seja valorizada. A gente quer construir uma sociedade onde todo mundo tenha acesso a uma boa educação, saúde, moradia e oportunidades, sem discriminação.</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
