--- a/social.html
+++ b/social.html
@@ -24,7 +24,8 @@
   </ul>
   <img
     src="trabalho.png"
-    alt="Uma imagem de um grupo de pessoas de diferentes etnias trabalhando juntas em uma horta">
+    alt="Uma imagem de um grupo de pessoas de diferentes etnias trabalhando juntas em uma horta"
+    style="width: 400px; display: block; margin-right: 100px auto;">
   <p>O **aspecto social** foca em todo mundo viver bem e de forma justa. O objetivo é diminuir a diferença entre ricos e pobres, garantir que todos tenham seus direitos respeitados e que a diversidade seja valorizada. A gente quer construir uma sociedade onde todo mundo tenha acesso a uma boa educação, saúde, moradia e oportunidades, sem discriminação.</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
