--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </video>
     <div class="explicacao">
       <h2>Introdução</h2>
-      <p>O desenvolvimento sustentável busca equilibrar três pilares fundamentais: o <b>ambiental</b>, o <b>social</b> e o <b>econômico</b>. Ao assistir o vídeo ao lado, você terá uma visão geral de como essas dimensões se conectam para promover um futuro mais justo e equilibrado.</p>
+      <p>O desenvolvimento sustentável é um modelo de desenvolvimento econômico, social e político que esteja em harmonia com o meio ambiente, ele possui 3 pilares principais e busca equilibra-los, eles são: o <b>ambiental</b>, o <b>social</b> e o <b>econômico</b>. Ao assistir o vídeo ao lado, você terá uma visão geral de como essas dimensões se conectam para promover um futuro mais justo e equilibrado.</p>
     </div>
   </div>
 </body>
