--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
       font-size: 18px;
       color: #013220;
     }
+    .dragaokomodo {
+      max-width: 400px;
+      text-align:center;
+      font-size: 18px:
+      color:#013220;
+    }
   </style>
 </head>
 <body>
@@ -134,7 +140,9 @@
     <div class="explicacao">
       <h2>Introdução</h2>
       <p>O desenvolvimento sustentável é um modelo de desenvolvimento econômico, social e político que esteja em harmonia com o meio ambiente, ele possui 3 pilares principais e busca equilibra-los, eles são: o <b>ambiental</b>, o <b>social</b> e o <b>econômico</b>. Ao assistir o vídeo ao lado, você terá uma visão geral de como essas dimensões se conectam para promover um futuro mais justo e equilibrado.</p>
-    </div>
+    </div class="dragaokomodo">
+    <h2>AGENDA 2030</h2>
+    <p>as Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a serem cumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável.</p>
   </div>
 </body>
 </html>
