--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
     .video-section {
       margin-top: 100px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 30px;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 30px; /* Espaçamento entre os elementos */
       padding: 20px;
     }
 
     video {
       width: 800px;
-      max-width: 90%; /* pra celular */
+      max-width: 90%; /* Para dispositivos móveis */
       border: 2px solid green;
       border-radius: 10px;
     }
@@ -113,11 +113,13 @@
       font-size: 18px;
       color: #013220;
     }
+
     .dragaokomodo {
       max-width: 600px;
-      text-align:center;
-      font-size: 18px:
+      text-align: center;
+      font-size: 18px;
       color: #013220;
+      margin-top: 20px; /* Garantindo que haja espaço entre a explicação e o texto da Agenda 2030 */
     }
   </style>
 </head>
@@ -137,12 +139,13 @@
       <source src="video.mp4" type="video/mp4">
       Seu navegador não suporta vídeo.
     </video>
+
     <div class="explicacao">
       <h2>Introdução</h2>
       <p>O desenvolvimento sustentável é um modelo de desenvolvimento econômico, social e político que esteja em harmonia com o meio ambiente, ele possui 3 pilares principais e busca equilibra-los, eles são: o <b>ambiental</b>, o <b>social</b> e o <b>econômico</b>. Ao assistir o vídeo ao lado, você terá uma visão geral de como essas dimensões se conectam para promover um futuro mais justo e equilibrado.</p>
-    </div class="dragaokomodo">
+    </div>
+  </div> <!-- fecha video-section -->
+
+  <div class="dragaokomodo">
     <h2>AGENDA 2030</h2>
-    <p>as Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a serem cumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável.</p>
-  </div>
-</body>
-</html>
+    <p>As Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a serem
