--- a/index.html
+++ b/index.html
@@ -148,4 +148,4 @@
 
   <div class="dragaokomodo">
     <h2>AGENDA 2030</h2>
-    <p>As Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a serem
+    <p>As Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a seremcumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável.
