--- a/index.html
+++ b/index.html
@@ -148,4 +148,4 @@
 
   <div class="dragaokomodo">
     <h2>AGENDA 2030</h2>
-    <p>As Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a seremcumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável.
+    <p>As Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a seremcumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável. estes são: Erradicaçãoda pobreza,fome zero e agricultura sustentável,saúde e bem estar,educação de qualidade,igualidade de gênero,água potável e saneamento,energia limpa e acessível,trabalho decente e crescimento econômico,indústria,inovaçaõ e infraestrutura,redução das desigualdades,cidades e comunidades sustentáveis,consumo e produção responsáveis,aç~so contra a mudança global do clim,vida na água,vida terrestre,paz, justiça e instituições eficazes, parcerias e meios de implementação.
