--- a/ambiental.html
+++ b/ambiental.html
@@ -27,7 +27,8 @@
   alt="Uma imagem de uma mão segurando um broto"
   style="width: 400px; display: block; margin-right: 100px auto;"
 >
-  <p>O **aspecto ambiental** é o pilar que garante a base física e ecológica para toda a vida e atividade humana. Sem um ambiente saudável, não há economia que prospere a longo prazo, nem sociedade que se desenvolva com qualidade de vida. Para garantir o desenvolvimento sustentável no aspecto ambiental é necessário o cuidado com o planeta. isso signfica usar os recursos naturais, como água e a energia, de um jeito inteligente para que eles não acabem, isso também inclui proteger animais e as plantas, reduzir a poluição e usar energias limpas, como a solar. A ideia é garantir que a gente possa continuar vivendo bem sem destruir a natureza para as futuras gerações</p>
+  <p>O **aspecto ambiental** é o pilar que garante a base física e ecológica para toda a vida e atividade humana. Sem um ambiente saudável, não há economia que prospere a longo prazo, nem sociedade que se desenvolva com qualidade de vida. Para garantir o desenvolvimento sustentável no aspecto ambiental é necessário o cuidado com o planeta. isso signfica usar os recursos naturais, como água e a energia, de um jeito inteligente para que eles não acabem, isso também inclui proteger animais e as plantas, reduzir a poluição e usar energias limpas, como a solar.
+    A ideia é garantir que a gente possa continuar vivendo bem sem destruir a natureza para as futuras gerações</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
 </html>
