--- a/economico.html
+++ b/economico.html
@@ -27,7 +27,7 @@
   alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo"
   style="width: 400px; display: block; margin-right: 100px auto;"
 >
-  <p>O **aspecto econômico** não é só sobre grana, mas sobre ganhar essa grana de um jeito que não prejudique o ambiente nem as pessoas. A ideia é criar empregos e riqueza de forma inteligente, usando a tecnologia e a inovação pra aproveitar os recursos sem desperdício. Assim, a gente consegue crescer economicamente, mas com responsabilidade, sem esgotar o que a natureza tem a oferecer.</p>
+  <p>O **aspecto econômico** não é só sobre dinheiro, A ideia é criar empregos e riqueza de forma inteligente, usando a tecnologia e a inovação pra aproveitar os recursos sem desperdício. Assim, a gente consegue crescer economicamente, mas com responsabilidade, sem esgotar o que a natureza tem a oferecer. Em síntese: Criar uma economia robusta e resiliente que não dependa da degradação ambiental para crescer, garantindo prosperidade não apenas no curto, mas principalmente no longo prazo.</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
 </html>
