--- a/economico.html
+++ b/economico.html
@@ -27,7 +27,8 @@
   alt="Uma imagem de uma mão segurando um pequeno broto, com engrenagens e moedas no fundo"
   style="width: 400px; display: block; margin-right: 100px auto;"
 >
-  <p>O **aspecto econômico** não é só sobre dinheiro, A ideia é criar empregos e riqueza de forma inteligente, usando a tecnologia e a inovação pra aproveitar os recursos sem desperdício. Assim, a gente consegue crescer economicamente, mas com responsabilidade, sem esgotar o que a natureza tem a oferecer. Em síntese: Criar uma economia robusta e resiliente que não dependa da degradação ambiental para crescer, garantindo prosperidade não apenas no curto, mas principalmente no longo prazo.</p>
+  <p>O desenvolvimento sustentável está diretamente ligado à preservação do meio ambiente, pois busca conciliar o crescimento econômico e o bem-estar social com a conservação dos recursos naturais. Do ponto de vista ambiental, ele reconhece que os recursos do planeta são finitos e que o uso irresponsável deles compromete a capacidade das futuras gerações de atenderem às suas próprias necessidades. Por isso, esse modelo de desenvolvimento propõe práticas que minimizem os impactos ambientais, como o uso racional da água, a preservação da biodiversidade, a redução da poluição do ar, da água e do solo, e o incentivo ao uso de fontes de energia renovável, como a solar e a eólica. Além disso, promove a recuperação de áreas degradadas e a redução da geração de resíduos, priorizando a reciclagem e a economia circular. A educação ambiental também é um aspecto essencial, pois conscientiza a população sobre a importância de hábitos mais sustentáveis no dia a dia. Dessa forma, os aspectos ambientais do desenvolvimento sustentável estão centrados na busca por equilíbrio entre a atividade humana e a manutenção da saúde dos ecossistemas, garantindo um futuro mais justo e viável para todos.
+</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
 </html>
