--- a/social.html
+++ b/social.html
@@ -27,7 +27,11 @@
     alt="Uma imagem de um grupo de pessoas de diferentes etnias trabalhando juntas em uma horta"
     style="width: 400px; display: block; margin-right: 100px auto;"
     >
-  <p>O **aspecto social** foca em todo mundo viver bem e de forma justa. O objetivo é diminuir a diferença entre ricos e pobres, garantir que todos tenham seus direitos respeitados e que a diversidade seja valorizada. A gente quer construir uma sociedade onde todo mundo tenha acesso a uma boa educação, saúde, moradia e oportunidades, sem discriminação.</p>
+  <p>O aspecto social do desenvolvimento sustentável está voltado para a promoção da justiça social, da equidade e da melhoria da qualidade de vida para todas as pessoas. Isso significa garantir acesso universal a direitos básicos como educação, saúde, moradia, saneamento básico, segurança e oportunidades de trabalho digno. Um desenvolvimento só é verdadeiramente sustentável quando considera a redução das desigualdades sociais e regionais, a inclusão de grupos historicamente marginalizados e o fortalecimento da participação cidadã nas decisões políticas e comunitárias.
+
+A valorização da diversidade cultural, o respeito aos direitos humanos e o combate à pobreza também são componentes centrais desse aspecto. Além disso, o desenvolvimento social sustentável incentiva comunidades mais resilientes, com acesso a serviços essenciais, infraestrutura adequada e ambientes seguros para viver. A educação, em especial, tem papel fundamental nesse processo, pois forma cidadãos mais conscientes, críticos e preparados para construir uma sociedade mais justa e equilibrada.
+
+Em resumo, o aspecto social do desenvolvimento sustentável busca garantir que o progresso beneficie a todos de forma igualitária, promovendo inclusão, dignidade e bem-estar, ao mesmo tempo em que respeita os limites ambientais e apoia a estabilidade econômica.</p>
   <a href="index.html">⬅ Voltar</a>
 </body>
 </html>
