--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
       flex-wrap: wrap;
     }
 
-    video {
+    iframe {
       width: 800px;
       max-width: 90%;
+      height: 450px;
       border: 2px solid green;
       border-radius: 10px;
     }
@@ -146,10 +147,14 @@
   </div>
 
   <div class="video-section">
-    <video controls>
-      <source src="WhatsApp Video 2025-10-29 at 22.05.49.mp4" type="video/mp4">
-      Seu navegador não suporta vídeo.
-    </video>
+    <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/h_IYnTHqhdM?si=ByW2tRcWSo-o37fB"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen>
+    </iframe>
 
     <div class="explicacao">
       <h2>Introdução</h2>
